# dotfiles

./: README.md  install.sh  packages.txt
configs/: XCompose  fzf.conf  kmonad.kbd  mimeapps.list  shellcheckrc  user-dirs.dirs  xdg-terminals.list
configs/asy/: config.asy  preamble.asy
configs/bat/: config
configs/browser/: browser-homepage.html  firefox_sync_profile
configs/btop/: btop.conf
configs/clang-format/: clang-format
configs/clangd/: config.yaml
configs/eza/: theme.yml
configs/git/: config
configs/hypr/: hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprsunset.conf  hyprtoolkit.conf  xdph.conf
configs/hyprland-preview-share-picker/: config.yaml  style.css
configs/illogical-impulse/: config.json  installed_listfile
configs/imv/: config
configs/kitty/: kanagawa.conf  keymaps.conf  kitty.conf  plugins.lua  symbol_map.conf  tab_bar.py
configs/kmonad/: capslock.kbd  home_row_mods.kbd
configs/lazygit/: config.yml
configs/mpv/: mpv.conf
configs/mutt/: muttrc
configs/neomutt/: neomuttrc
configs/nvim/: a.lua  init.lua  lockfile.json
configs/oly/: config.yaml
configs/safeeyes/: safeeyes.json
configs/stylua/: stylua.toml
configs/tex-fmt/: tex-fmt.toml
configs/tmux/: tmux.conf
etc/: blackscreen.cpp  dbg.h  dbg.hpp  firefox.cfg  install.sh  limine.conf  logind.conf
etc/blackscreen/: Cargo.toml
etc/blackscreen/src/: main.rs
etc/texmf/: ls-R
scripts/: assemble  bedtime  compile_sfml  free  fzf_preview  fzf_preview_wrapper  git_dotfiles  mailto  memory-usage  rgb  termsize  zoxide-rename  zoxide_migrate.lua
(+967 files in other folders)
